# TranscribinOff

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: fastapi.yaml
src/transcribinoff/: app.py
src/transcribinoff/routers/: users.py
tests/: .coveragerc  pytest.ini  test_app.py
