[tool.poetry]
name = "transcribinoff"
version = "0.1.0"
description = ""
authors = ["Moshe Reubinoff <reubinoff@gmail.com>"]
readme = "README.md"
packages = [{ from = "src", include = "transcribinoff" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
ruff = "^0.7.0"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
