[tool.poetry]
name = "transcribinoff"
version = "0.1.0"
description = ""
authors = ["Moshe Reubinoff <reubinoff@gmail.com>"]
readme = "README.md"
packages = [{ from = "src", include = "transcribinoff" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
ruff = "^0.7.0"
uvicorn = "^0.32.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
