[tool.poetry]
name = "transcribinoff"
version = "0.1.0"
description = ""
authors = ["Moshe Reubinoff <reubinoff@gmail.com>"]
readme = "README.md"
packages = [{ from = "src", include = "transcribinoff" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
ruff = "^0.7.0"
uvicorn = "^0.32.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
# Test file patterns to discover
python_files = [
    "test_*.py",
    "*_test.py",
    "*_tests.py"
]

# Command line options
addopts = [
    "--cov=src/transcribinoff",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=annotate",
    "--cov-fail-under=100",
    "--cov-config=tests/.coveragerc",
    "--junitxml=pytest-report.xml"
]

# Test directory paths
testpaths = ["tests"]

# Asyncio settings
asyncio_mode = "auto"